fixed background image on mobile devices

--- a/v1/common.css
+++ b/v1/common.css
@@ -22,6 +22,7 @@ body {
     background-image: linear-gradient(var(--bgcolor), var(--bgcolor)), var(--bgimage);
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
     color: var(--secondary);
 }
 
